[gd_scene load_steps=4 format=3 uid="uid://cfb836nrk37qg"]

[ext_resource type="Script" uid="uid://bg4rfspcohlb6" path="res://scripts/enemy/enemy_projectile.gd" id="1_projectile"]

[sub_resource type="CircleShape2D" id="CircleShape2D_projectile"]
radius = 4.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_projectile"]
size = Vector2(8, 8)

[node name="EnemyProjectile" type="Area2D"]
collision_layer = 0
collision_mask = 3
script = ExtResource("1_projectile")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_projectile")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
texture = SubResource("PlaceholderTexture2D_projectile")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
